Create an overlay feature to display user form
This overlay feature will bring out a form for the user to fill out
the book they wish to add to their library

--- a/index.html
+++ b/index.html
@@ -19,5 +19,29 @@
         </div>
       </div>
     </main>
+    <div class="overlay">
+      <button type="button" class="close-overlay">
+        <img class="icon" src="./icons/close.svg" alt="" />
+      </button>
+      <form action="">
+        <div class="form-field">
+          <label for="title">Title:</label>
+          <input id="title" type="text" />
+        </div>
+        <div class="form-field">
+          <label for="author">Author:</label>
+          <input id="author" type="text" />
+        </div>
+        <div class="form-field">
+          <label for="pages">Pages:</label>
+          <input id="pages" type="text" />
+        </div>
+        <div class="form-field">
+          <label for="read">Read?</label>
+          <input id="read" type="checkbox" />
+        </div>
+        <button type="button">Log Book</button>
+      </form>
+    </div>
   </body>
 </html>
