Add funtionality that adds new book to library

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         <div class="form-field">
           <label for="read">Read?</label>
           <input id="read" type="checkbox" />
+          <input type="hidden" value="off">
         </div>
-        <button type="button">Log Book</button>
+        <button class="add-book-button" type="button">Log Book</button>
       </form>
     </div>
   </body>
