Add feature to allow user to edit book information

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </main>
     <div class="overlay">
       <button type="button" class="close-overlay">
-        <img class="icon" src="./icons/close.svg" alt="" />
+        <img class="icon-large" src="./icons/close.svg" alt="" />
       </button>
-      <form action="">
+      <form action="" data-card-index-edit="">
         <div class="form-field">
           <label for="title">Title:</label>
           <input id="title" type="text" />
