--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
         <div class="form-field">
           <label for="title">Title:</label>
           <span class="icon-small">
-            <input id="title" type="text" name="title" required />
+            <input
+              id="title"
+              type="text"
+              name="title"
+              maxlength="300"
+              required
+            />
           </span>
           <div class="error-field hide">
             <p class="error-message"></p>
@@ -39,7 +45,13 @@
         <div class="form-field">
           <label for="author">Author:</label>
           <span class="icon-small">
-            <input id="author" type="text" name="author" required />
+            <input
+              id="author"
+              type="text"
+              name="author"
+              maxlength="300"
+              required
+            />
           </span>
           <div class="error-field hide">
             <p class="error-message"></p>
@@ -53,6 +65,7 @@
               type="number"
               name="pagesRead"
               min="0"
+              max="50000"
               required
             />
           </span>
@@ -61,8 +74,19 @@
           </div>
         </div>
         <div class="form-field">
-          <label for="read">Read?</label>
-          <input id="read" type="checkbox" name="read" />
+          <label for="read-status">Read Status:</label>
+          <span class="icon-small">
+            <select id="read-status" name="readStatus" required>
+              <option value="" selected>--Please choose an option--</option>
+              <option value="Want to Read">Want to Read</option>
+              <option value="Reading">Reading</option>
+              <option value="Stopped Reading">Stopped Reading</option>
+              <option value="Finished Reading">Finshed Reading</option>
+            </select>
+          </span>
+          <div class="error-field hide">
+            <p class="error-message"></p>
+          </div>
         </div>
         <button class="add-book-button" type="submit">Submit</button>
       </form>
