Add fxn to delete books and refactored form reset
A parent function was created to house all the functions needed to reset
the overlay form. This was done for readability purposes.

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
           </div>
         </div>
         <button class="add-book-button" type="submit">Submit</button>
+        <button class="delete-button hide" type="button">Delete</button>
       </form>
     </div>
   </body>
