--- a/index.html
+++ b/index.html
@@ -10,17 +10,45 @@
     <header>
       <h1>Library</h1>
       <h2>A web app where you can log and track all of the books you read</h2>
-      <button class="add-button">
-        <img
-          class="button-icon"
-          src="./icons/plus.svg"
-          alt="Plus symbol inside a button"
-        />Add to Library
-      </button>
+      <div class="header-buttons">
+        <button class="add-button">
+          <img
+            class="button-icon"
+            src="./icons/plus.svg"
+            alt="Plus symbol inside a button"
+          />Add to Library
+        </button>
+        <div class="view-button-container">
+          <button
+            class="view-button"
+            data-view="list-view"
+            data-view-style="list-style"
+          >
+            <img
+              class="icon-medium"
+              src="./icons/view-list.svg"
+              alt="list view icon"
+            />
+            List View
+          </button>
+          <button
+            class="view-button"
+            data-view="grid-view"
+            data-view-style="grid-style"
+          >
+            <img
+              class="icon-medium"
+              src="./icons/view-grid.svg"
+              alt="grid view icon"
+            />
+            Grid View
+          </button>
+        </div>
+      </div>
     </header>
     <div class="border"></div>
     <main>
-      <div class="grid-container"></div>
+      <div class="grid-container grid-view"></div>
     </main>
     <div class="overlay">
       <button type="button" class="close-overlay">
