--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
         </div>
         <h3>A web app where you can log and track all of the books you read</h3>
         <div class="header-buttons">
-          <button class="add-button">
-            <img
-              class="button-icon"
-              src="./icons/plus.svg"
-              alt="Plus symbol inside a button"
-            />Add to Library
-          </button>
+          <div class="primary-buttons-container">
+            <button class="add-button">
+              <img
+                class="button-icon"
+                src="./icons/plus.svg"
+                alt="Plus symbol inside a button"
+              />Add to Library
+            </button>
+            <button class="demo-button">Demo Library</button>
+          </div>
           <div class="view-button-container">
             <button
               class="view-button"
