Restyle form overlay

--- a/index.html
+++ b/index.html
@@ -68,9 +68,6 @@
       </main>
     </div>
     <div class="overlay">
-      <button type="button" class="close-overlay">
-        <img class="icon-large" src="./icons/close.svg" alt="" />
-      </button>
       <form action="" data-card-index-edit="" novalidate>
         <div class="form-field">
           <label for="title">Title:</label>
@@ -133,8 +130,15 @@
             <p class="error-message"></p>
           </div>
         </div>
-        <button class="add-book-button" type="submit">Submit</button>
+        <button class="submit-button" type="submit">Submit</button>
         <button class="delete-button hide" type="button">Delete</button>
+        <button type="button" class="close-overlay">
+          <img
+            class="icon-large"
+            src="./icons/close-circle-outline.svg"
+            alt=""
+          />
+        </button>
       </form>
     </div>
   </body>
