Refactor clearOverlayForm and rename "data-" attr.
clearOverlayForm was refactored to remove unused conditionals.
data-card-index-edit was renamed to data-card-index-target to clarify
the where values the form overlay data attribute was coming from. In
this case, from data-card-index from the cards based on which card the
user interacted with.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </main>
     </div>
     <div class="submit-edit-form overlay">
-      <form action="" data-card-index-edit="" novalidate>
+      <form action="" data-card-index-target="" novalidate>
         <div class="form-field">
           <label for="title">Title:</label>
           <span class="icon-small">
