Add clarification and make overlays focusable
The form overlay was made focusable to avoid an issue where
aggressive validation was triggerred when closing the form
immediatly. The deletion confirmation overlay was made focusable to
avoid a potential issue where the user might confirm their choice
before reading the deletion confirmation message.

Clarification was added to overlayButtonClose eventlistener.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </main>
     </div>
     <div class="submit-edit-form overlay">
-      <form action="" data-card-index-target="" novalidate>
+      <form action="" data-card-index-target="" tabindex="-1" novalidate>
         <div class="form-field">
           <label for="title">Title:</label>
           <span class="icon-small">
@@ -141,7 +141,11 @@
       </form>
     </div>
     <div class="delete-confirmation overlay">
-      <div class="delete-confirmation-container" data-card-index-target="">
+      <div
+        class="delete-confirmation-container"
+        data-card-index-target=""
+        tabindex="-1"
+      >
         <p>Are you sure you want to delete the book from your library?</p>
         <div class="delete-confirmation-buttons">
           <button class="delete-button">Yes</button>
